--- a/index.html
+++ b/index.html
@@ -24,29 +24,27 @@
   </div>
 </body>
 </html>
+
 <style>
   .links{
-    position: fixed;
+    position: absolute;
     bottom: 20px;
-    left: 41%;
+    right: 20px;
   }
-  .links li{
-    display: inline-block;
+  .links a{
     margin-left: 10px;
-  }
-  .links li a{
-    color: #fff;
+    color: #000;
     letter-spacing: 1px;
     font-size: 18px;
     text-decoration: none;
   }
-  .links li a:hover{
-    color: #f3f3f3;
+  .links a:hover{
+    color: #999;
     text-decoration: underline;
   }
 </style>
-<ul class="links">
-  <li><a href="https://www.youtube.com/channel/UCB_7fGuHvxBuZuS8lJIlgww" target="_blank">Youtube</a></li>
-  <li><a href="https://www.facebook.com/Nadeem.Akram035" target="_blank">Facebook</a></li>
-  <li><a href="https://github.com/Nadeem035" target="_blank">GitHub</a></li>
-</ul>
+<div class="links">
+  <a href="https://www.youtube.com/channel/UCB_7fGuHvxBuZuS8lJIlgww" target="_blank">Youtube</a>
+  <a href="https://www.facebook.com/Nadeem.Akram035" target="_blank">Facebook</a>
+  <a href="https://github.com/Nadeem035" target="_blank">GitHub</a>
+</div>
